--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ border: 2px solid transparent;
    font-size: 0.85rem;
    margin-left: 15px;
  }
+
+ /* add logo */
  .add-second{
    font-size: 1rem;
    margin-left: 2px;
